# signalforge-daily

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.json  current-task.md  pyproject.toml  requirements.txt
.harness/: command-history.md  progress-map.md  session-log.md  session-state.json
app/: index.html  package-lock.json  package.json
app/scripts/: run-tauri.ps1
app/src/: styles.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/binaries/: README.md
app/src-tauri/capabilities/: default.json
app/src-tauri/sidecar/: build-digest-sidecar.ps1
app/src-tauri/sidecar/digest-sidecar/: Cargo.toml
app/src-tauri/sidecar/digest-sidecar/src/: main.rs
app/src-tauri/src/: lib.rs  main.rs
app/src/app/: App.tsx  routes.ts
app/src/components/: AppShell.tsx  ErrorRecoveryCard.tsx  FeedWarningsCard.tsx  LatestDigestCard.tsx  MarkdownPreview.tsx  RunStatusCard.tsx  SettingsForm.tsx  TodayOverviewCard.tsx  TopPicksList.tsx  ui.tsx
app/src/demo/: sampleData.ts
app/src/pages/: ReportsPage.tsx  SettingsPage.tsx  SetupPage.tsx  SourcesPage.tsx  TodayPage.tsx
app/src/services/: bridge.ts  configReadiness.ts  format.ts  notificationService.ts  obsidianOutput.test.ts  obsidianOutput.ts  uiState.test.ts  uiState.ts
app/src/types/: bridge.ts  config.ts  report.ts  run.ts
docs/: architecture.md  coding-guidelines.md  decisions.md  error-journal.md  privacy.md  release-checklist.md  smoke-test.md  troubleshooting.md  verification.md
scripts/: graph_viz.py  harness_check.sh  run_digest_with_retry.sh  safe_bash_guard.sh
skills/commit/: SKILL.md
skills/handoff/: SKILL.md
skills/plan/: SKILL.md
skills/review/: SKILL.md
skills/start/: SKILL.md
src/news_collection/: __init__.py  arxiv.py  blog_cli.py  cli.py  digest.py  digest_cli.py  digest_feeds.py  graph.py  pdf_tools.py  storage.py  telemetry.py
src/news_collection/blog_tracker/: storage.py
src/news_collection/blog_tracker/sources/: __init__.py  claude_blog.py  date_utils.py  feed_utils.py
src/signalforge_daily/: arxiv.py  cli.py  digest.py  digest_cli.py  digest_feeds.py  graph.py  iflow.py  storage.py
src/signalforge_daily/blog_tracker/: __init__.py  runner.py
src/signalforge_daily/blog_tracker/sources/: base.py  lilian_weng_blog.py  openai_blog.py
tests/: test_digest.py
