[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "news-collection"
version = "0.1.0"
description = "LangGraph-based collection pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.31",
  "langchain-openai>=0.1.20",
  "openai>=1.40.0",
  "pypdf>=4.2.0",
  "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["src"]
