[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "news-collection"
version = "0.1.0"
description = "LangGraph-based collection pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.31",
  "langchain-openai>=0.1.20",
  "langfuse>=2.0.0",
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
  "pypdf>=4.2.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
