[package]
name = "ai-news-collection"
version = "0.1.0"
description = "Local-first desktop wrapper for AI daily digest generation"
authors = ["news_collection contributors"]
edition = "2021"

[lib]
name = "ai_news_collection_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
opener = "0.8"
regex = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
